Estruturas de decisão

--- a/exercicio-trocar-imagem/index.html
+++ b/exercicio-trocar-imagem/index.html
@@ -9,7 +9,7 @@
 <body>
     <figure>
         <img src="presente-fechado.gif" id="presente" 
-            alt="Presente Fechado"
+            alt="Presente Fechado" onclick="trocarImagem()"
         />
     </figure>
 
